logs/Slang/generated/hdlconv/hdlconvertor_p124.sv.log
name: hdlconvertor_p124
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p124.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p124.sv:2:32: error: language feature not yet supported
#( parameter p1 = 1, parameter type p2 = shortint )
                               ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p124.sv:2:42: error: expected expression
#( parameter p1 = 1, parameter type p2 = shortint )
                                         ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p124.sv:4:1: error: 'p2' is not a type
p2 j = 0; // type of j is set by a parameter, (shortint unless redefined)
^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p124.sv:12:18: error: expected expression
ma #(.p1(3), .p2(int)) u1(i,o); //redefines p2 to a type of int
                 ^~~
